--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,19 +16,49 @@
   ~    limitations under the License.
   -->
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".activity.MainActivity">
 
-    <RelativeLayout
-        android:id="@+id/toolbar"
+    <android.support.v4.view.ViewPager
+        android:id="@+id/view_pager"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
-        android:elevation="4dp"
-        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
-</RelativeLayout>
+        android:layout_height="0dp"
+        android:layout_weight="1" />
+
+    <android.support.design.widget.TabLayout
+        android:id="@+id/footer_bar"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@color/color_action_bar"
+        android:baselineAligned="false"
+        android:elevation="5dp"
+        android:orientation="horizontal"
+        app:tabIndicatorHeight="0dp">
+
+        <android.support.design.widget.TabItem
+            android:layout_width="0dp"
+            android:layout_height="match_parent" />
+
+        <android.support.design.widget.TabItem
+            android:layout_width="0dp"
+            android:layout_height="match_parent" />
+
+        <android.support.design.widget.TabItem
+            android:layout_width="0dp"
+            android:layout_height="match_parent" />
+
+        <android.support.design.widget.TabItem
+            android:layout_width="0dp"
+            android:layout_height="match_parent" />
+
+        <android.support.design.widget.TabItem
+            android:layout_width="0dp"
+            android:layout_height="match_parent" />
+
+    </android.support.design.widget.TabLayout>
+</LinearLayout>
