--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,5 +18,7 @@
 <resources>
     <color name="color_action_bar">#FFFFFF</color>
     <color name="color_status_bar">@color/color_action_bar</color>
-    <color name="color_normal_button">#2B59A3</color>
+    <color name="color_normal_button">#1296db</color>
+    <color name="search_box_background">#F0F0F0</color>
+    <color name="color_black">#000000</color>
 </resources>
