[0.0.3] Recommend Question List
Design Recommend Qeustion List, Add Glide Depency

Signed-off-by: chengjie<chengjie.jlu@qq.com>

--- a/app/src/main/res/layout/fragment_recommend.xml
+++ b/app/src/main/res/layout/fragment_recommend.xml
@@ -22,5 +22,6 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:background="@color/search_box_background" />
 </LinearLayout>
