--- a/app/src/main/res/layout/item_recommend_question.xml
+++ b/app/src/main/res/layout/item_recommend_question.xml
@@ -14,7 +14,7 @@
   ~    limitations under the License.
   -->
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.jlu.chengjie.zhihu.view.NormalRecommendItem xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -50,15 +50,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
-            android:textSize="15sp"
-            android:textStyle="bold" />
+            android:textColor="@color/color_black"
+            android:textSize="15sp" />
 
         <TextView
             android:id="@+id/signature"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
-            android:textSize="13sp" />
+            android:textSize="12sp" />
     </LinearLayout>
 
     <TextView
@@ -86,4 +86,4 @@
             android:src="@drawable/more"
             tools:ignore="ContentDescription" />
     </RelativeLayout>
-</LinearLayout>
+</com.jlu.chengjie.zhihu.view.NormalRecommendItem>
