--- a/app/src/main/res/layout/fragment_edit.xml
+++ b/app/src/main/res/layout/fragment_edit.xml
@@ -20,7 +20,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
     android:orientation="vertical">
 
     <RelativeLayout
@@ -28,25 +27,118 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@color/color_action_bar"
-        android:elevation="5dp">
+        android:elevation="5dp"
+        android:paddingLeft="5dp"
+        android:paddingTop="20dp"
+        android:paddingRight="5dp">
 
-        <TextView
-            android:id="@+id/submit"
-            android:layout_width="wrap_content"
+        <HorizontalScrollView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="15dp">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/undo"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_marginStart="10dp"
+                    android:src="@drawable/undo"
+                    tools:ignore="ContentDescription" />
+
+                <ImageView
+                    android:id="@+id/redo"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_marginStart="10dp"
+                    android:src="@drawable/redo"
+                    tools:ignore="ContentDescription" />
+
+                <View
+                    android:layout_width="2dp"
+                    android:layout_height="20dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="10dp"
+                    android:background="#8a8a8a" />
+
+                <ImageView
+                    android:id="@+id/title_level"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_marginStart="10dp"
+                    android:src="@drawable/header"
+                    tools:ignore="ContentDescription" />
+
+                <ImageView
+                    android:id="@+id/text_style"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_marginStart="10dp"
+                    android:src="@drawable/bold"
+                    tools:ignore="ContentDescription" />
+
+                <ImageView
+                    android:id="@+id/image"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_marginStart="8dp"
+                    android:src="@drawable/image"
+                    tools:ignore="ContentDescription" />
+
+                <ImageView
+                    android:id="@+id/link"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_marginStart="10dp"
+                    android:src="@drawable/link"
+                    tools:ignore="ContentDescription" />
+
+                <ImageView
+                    android:id="@+id/list_style"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_marginStart="8dp"
+                    android:src="@drawable/unordered_list"
+                    tools:ignore="ContentDescription" />
+
+                <ImageView
+                    android:id="@+id/code_style"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_marginStart="10dp"
+                    android:src="@drawable/code"
+                    tools:ignore="ContentDescription" />
+
+
+                <ImageView
+                    android:id="@+id/preview"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_marginStart="8dp"
+                    android:src="@drawable/eye"
+                    tools:ignore="ContentDescription" />
+            </LinearLayout>
+        </HorizontalScrollView>
+
+        <ImageView
+            android:id="@+id/submit"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:layout_marginEnd="15dp"
-            android:text="@string/text_view_markdown_preview"
-            android:textColor="@color/color_normal_button"
-            android:textSize="18sp" />
+            android:layout_marginEnd="10dp"
+            android:src="@drawable/check"
+            tools:ignore="ContentDescription" />
     </RelativeLayout>
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp">
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp">
 
         <EditText
             android:id="@+id/edit_text"
@@ -55,6 +147,7 @@
             android:background="@null"
             android:hint="@string/hint_input_content"
             android:inputType="textMultiLine"
+            android:paddingTop="15dp"
             tools:ignore="Autofill" />
     </ScrollView>
 </LinearLayout>
