--- a/app/src/main/res/menu/editor_title_level.xml
+++ b/app/src/main/res/menu/editor_title_level.xml
@@ -16,9 +16,26 @@
   ~    limitations under the License.
   -->
 
-<translate xmlns:android="http://schemas.android.com/apk/res/android"
-    android:duration="300"
-    android:fromXDelta="0"
-    android:fromYDelta="100%"
-    android:toXDelta="0"
-    android:toYDelta="0" />
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <item
+        android:id="@+id/h1"
+        android:title="@string/editor_title_level_one" />
+
+    <item
+        android:id="@+id/h2"
+        android:title="@string/editor_title_level_two" />
+    <item
+        android:id="@+id/h3"
+        android:title="@string/editor_title_level_three" />
+
+    <item
+        android:id="@+id/h4"
+        android:title="@string/editor_title_level_four" />
+    <item
+        android:id="@+id/h5"
+        android:title="@string/editor_title_level_five" />
+
+    <item
+        android:id="@+id/h6"
+        android:title="@string/editor_title_level_six" />
+</menu>
