--- a/app/src/main/res/values-zh-rCN/string.xml
+++ b/app/src/main/res/values-zh-rCN/string.xml
@@ -59,4 +59,6 @@
 
     <string name="dialog_insert_image_address_hint">输入图片地址</string>
     <string name="dialog_insert_image_description_hint">输入链接描述(选填)</string>
+
+    <string name="list_head_discover_more">发现更多感兴趣的人</string>
 </resources>
