--- a/app/src/main/res/layout/item_header_discover_more.xml
+++ b/app/src/main/res/layout/item_header_discover_more.xml
@@ -16,14 +16,14 @@
   ~    limitations under the License.
   -->
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.jlu.chengjie.zhihu.view.HeaderDiscoverMore xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="50dp"
+    android:layout_marginTop="10dp"
     android:background="@color/color_action_bar"
     android:paddingLeft="15dp"
-    android:paddingRight="15dp"
-    android:layout_marginTop="10dp">
+    android:paddingRight="15dp">
 
     <TextView
         android:layout_width="wrap_content"
@@ -31,6 +31,7 @@
         android:layout_centerVertical="true"
         android:text="@string/list_head_discover_more"
         android:textColor="@color/color_black"
+        android:textSize="16sp"
         android:textStyle="bold"
         tools:ignore="RelativeOverlap" />
 
@@ -40,32 +41,28 @@
         android:layout_height="30dp"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
-        android:layout_marginEnd="100dp"
-        android:src="@drawable/avatar" />
+        android:layout_marginEnd="100dp" />
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
-        android:layout_marginEnd="80dp"
-        android:src="@drawable/avatar" />
+        android:layout_marginEnd="80dp" />
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
-        android:layout_marginEnd="60dp"
-        android:src="@drawable/avatar" />
+        android:layout_marginEnd="60dp" />
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
-        android:layout_marginEnd="40dp"
-        android:src="@drawable/avatar" />
+        android:layout_marginEnd="40dp" />
 
 
     <ImageView
@@ -75,4 +72,4 @@
         android:layout_centerVertical="true"
         android:src="@drawable/right"
         tools:ignore="ContentDescription" />
-</RelativeLayout>
+</com.jlu.chengjie.zhihu.view.HeaderDiscoverMore>
